En comparant avec code à Nico, rendre le site fonctionnel

--- a/labo3/pro-gramme-base-lab3/client/style/main.css
+++ b/labo3/pro-gramme-base-lab3/client/style/main.css
@@ -6,10 +6,6 @@
     --fond-menu-choisi: #123456;
 }
 
-#para-1{
-    text-align: center;
-}
-
 footer{
     border: 2px solid black;
     text-align: center;
@@ -26,25 +22,6 @@ nav{
 #menu-principal {
     background-color: var(--fond-menu, #000);
     padding-top: 4px;
-}
-
-#menu-principal li a{
-    color: aliceblue;
-    text-decoration: none;
-}
-
-#menu-principal li{
-    display: inline-block;
-    line-height: 50px;
-    background-color: #555555;
-    cursor: pointer;
-    padding: 0 10px;
-}
-#menu-principal li:hover{
-    background-color: aliceblue;
-}
-#menu-principal li:hover a {
-    color: #555555;
 }
 
 .barre-menu {
@@ -117,7 +94,7 @@ nav{
     height: 150px;
 }
 
-#texte-acceuil, #section-inscription, #section-pdv, #formulaire-auth{
+#texte-acceuil, #section-inscription, #section-pdv{
     width: 66%;
     margin-left: 34%;
 }
